          (thanks to Rafael Oliveira)
- #403    Remove incorrect output stating that an empty interval was recorded
          (thanks to xeruf)
- #408    Update documentation of hint `:all`
          (thanks to quazgar)
- #437    Minor AtomicFile cleanup
          (thanks to Shaun Ruffel)
- #441    Return report return code
          (thanks to lospatchos)
- #458    Add man documentation for configuring tag colors.
          (thanks to Lim Ding Wen)
- #463    Add colors to summary
          (thanks to Lim Ding Wen)
- #466    Ignore empty exclusion ranges
- #468    Refactor interval filtering
- #469    Do not leak IntervalFilters in IntervalFilterAndGroup
          (thanks to Shaun Ruffel)
- #470    Do not leak filter in IntervalFilterFirstOf
          (thanks to Shaun Ruffel)
- #474    Make display of ids and annotations in summary report configurable
- #478    Add support for XDG Base Directory specification on Unixes
          (Thanks to Stanisław Wysocki)
- #491    Tracking an interval in the future while actively tracking time results in a database inconsistency
          (thanks to agentcoffee)
- #505    report 'totals.py' does not truncate intervals to report range
          (thanks to eq0cdk)
------ current release ---------------------------

1.4.3 (2021-05-28) - fc618636aacba6e52d447b482aeef58b375dfc8c

- #159    Tags enclosed in escaped double-quotes are not handled correctly
          (thanks to Shaun Ruffell)
- #379    CmdSummary: Fix calculation of display start in summary table
          (thanks to Shaun Ruffell)
- #387    Fixed URL for tarball download
          (thanks to Joerg Kastning)
- #390    dom.tracked.X.tag.Y always returns dom.tracked.1.tag.Y
          (thanks to pweaver2019)
- #393    Update dark_blue.theme
          (thanks to Peter Zuidema)
- #398    test: Thread.isAlive() -> Thread.is_alive()
          (thanks to Shaun Ruffell)
- #410    Replace roff man pages with asciidoctor