@@ -102,3 +102,4 @@ Thanks to the following, who submitted detailed bug reports and excellent sugges
   Rafael Oliveira
   agentcoffee
   eq0cdk
+  squirrellyDave
